# csharp-cmake-nested

./: .gitignore
Nested/: CMakeLists.txt
Nested/Nested/: CMakeLists.txt
Nested/Nested/src/: Program.cs
TestLibraries/LibraryOne/: CMakeLists.txt
TestLibraries/LibraryOne/include/: LibraryOne.h
TestLibraries/LibraryOne/src/: LibraryOne.cpp
TestLibraries/LibraryTwo/: CMakeLists.txt
TestLibraries/LibraryTwo/include/: LibraryTwo.h
TestLibraries/LibraryTwo/src/: LibraryTwo.cpp
